commit da85ba9ad60b51b45991463a43f4ca938c562a1c
Date:   Tue Jun 16 23:35:34 2015 +0300

    Fixed threading atexit hang.

commit e9990d6e83628289ffce7d340249b3e26bc88655
Date:   Tue Jun 16 19:24:03 2015 +0300

    Added share/examples/test_backtest_plot.sh

commit ab8bc2b15e2661009c89ca512bdbae8d69d5671b
Date:   Tue Jun 16 18:30:32 2015 +0300

    Fixed doc scripts again.

commit 3458b610860c5e8452c1a9378a6cac578b41a1cd
Date:   Tue Jun 16 17:58:16 2015 +0300

    Added wiki/RoadMap.creole

commit c25f73157f36f3c15ea2ef8e54cf158f4b39a9e1
Date:   Tue Jun 16 17:37:16 2015 +0300

    Fixing the test scripts.

commit ba0002fb6291574284a8cc047265783186c438f5
Date:   Tue Jun 16 14:01:52 2015 +0300

    Added shell scripts to keep the documentation up to date.

commit e6f4db4aae662009602c0f6cf1d1b42fc0628d1a
Date:   Tue Jun 16 01:04:19 2015 +0300

    Added tabview if it's one of the special pull request ones.

commit 388e0d870f42ddd81dbf059b7125937b1e33f3fb
Date:   Mon Jun 15 22:59:52 2015 +0300

    Fixed bugs and tests.

commit 0bc66b4ef1e8fce259f1ba536fd8660459323f9f
Date:   Mon Jun 15 19:33:29 2015 +0300

    Added wiki/Backtesting.creole

commit b1db01863d71497e3f9714024469a8267ba7b0f6
Date:   Sun Jun 14 13:56:04 2015 +0300

    Added wiki/Testing.creole

commit 684170b0f0a398b352b9b7db2e562569af93cca4
Date:   Sun Jun 14 00:08:13 2015 +0300

    Give up on github creole bugs.

commit ee8926c1c5501c0db856f065c43f19ed2f3632e2
Date:   Sat Jun 13 23:47:43 2015 +0300

    Added TitleIndex to wiki/_Sidebar.creole

commit edfabb1d9a6032fd13f7323b2f48fa32a219f4c9
Date:   Sat Jun 13 23:16:43 2015 +0300

    Added wiki/TestsFeatures.txt and wiki/TestsExamples.txt

commit fe5b5f05d0a4fd41a0808120e8ed793e65820300
Date:   Sat Jun 13 20:50:38 2015 +0300

    Work around github creole bugs.

commit 865aeb426f2ec36406ccb0efe48bc32dbbce4585
Date:   Sat Jun 13 20:33:16 2015 +0300

    renamed:    share/doc/08OTBackTest.txt -> wiki/DocOTBackTest.creole
