@@ -36,4 +36,6 @@ optional arguments:
 ----
 This file is automatically generated from the source code: do not edit.
 
-Next: [[DocOTCmd2_subscribe]]
+----
+Parent: [[Components]]
+Next: [[DocOTCmd2_subscribe]]----Parent: [[DocOTCmd2]]
