@@ -4,3 +4,6 @@ The recipes can be found in the
 [[OpenTrader/Omlettes/|https://github.com/OpenTrading/OpenTrader/raw/master/OpenTrader/Omlettes//]]
 directory of the distribution.
 
+
+----
+Parent: [[Architecture]]
