@@ -1,4 +1,4 @@
-==== Testing
+== Testing
 
 === Features
 
@@ -25,6 +25,11 @@ Because [[OTCmd2|DocOTCmd2]] is a [[cmd2|https://bitbucket.org/catherinedevlin/c
 application, not only can it interpret commands in an interactive loop,
 but it can read a list of commands from the stdin. This can be used to give
 examples of typical [[UseCases]].
+This makes it easy to write scripts as complete [[UseCase]] tests, giving good coverage.
+At the same time, it gives end-users a catalogue of complete working examples.
 
 For the currently scripted examples, see [[TestsExamples]].
 
+
+----
+Parent: [Home]
