@@ -1,8 +1,10 @@
 
 == Title Index
 
+* [[Architecture]]
 * [[Backtesting]]
 * [[ComparingOmeletteReviews]]
+* [[Components]]
 * [[DocOTBackTest]]
 * [[DocOTCmd2]]
 * [[DocOTCmd2_backtest]]
@@ -17,6 +19,7 @@
 * [[Home]]
 * [[Installation]]
 * [[Omlettes]]
+* [[RabbitMQ]]
 * [[Recipes]]
 * [[RoadMap]]
 * [[TabView]]
@@ -25,6 +28,7 @@
 * [[TestsFeatures]]
 * [[TitleIndex]]
 * [[UseCases]]
+* [[ViTables]]
 
 ----
 This file is automatically generated from the source code: do not edit.
