@@ -1,3 +1,10 @@
+commit 6f50dcdfc8cb4850523f9d60122b468b50522db4
+Date:   Wed Jun 17 08:09:38 2015 +0300
+
+    Added wiki/TabView.creole.
+    
+    examples tests run clean.
+
 commit da85ba9ad60b51b45991463a43f4ca938c562a1c
 Date:   Tue Jun 16 23:35:34 2015 +0300
 
